# sitix-rewrite

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  README  build.sh  evals.hpp  fileflags.h  mapview.hpp  sitix.cpp  sitixwriter.hpp  test.stx
.github/workflows/: main.yml
dynamotest/: test.html  test.stx
include/: defs.h  evals.hpp  fileflags.h  fileman.hpp  mapview.hpp  node.hpp  session.hpp  sitixwriter.hpp  treewatcher.hpp  util.hpp
include/evals/: core.hpp  evals.hpp  ops.hpp  types.hpp
include/types/: Copier.hpp  DebuggerStatement.hpp  Dereference.hpp  ForLoop.hpp  IfStatement.hpp  Object.hpp  PlainText.hpp  RedirectorStatement.hpp  TextBlob.hpp
output/: config.stx  index.html
output/meta/: persimmon  rhubarb  royalty
output/nested/: test.html
output/posts/: one-heart  one-love
output/tests/: index.html  markdown-fulltest.html
output/tuba/: rhubarb.stx
scripts/: README
scripts/json2sitix/: json2sitix.py  test.json
src/: evals.cpp  fileman.cpp  mapview.cpp  node.cpp  session.cpp  sitix.cpp  sitixwriter.cpp  treewatcher.cpp  util.cpp
src/evals/: BooleanObject.cpp  CallOperation.cpp  ConcatOperation.cpp  CopyOperation.cpp  Counter.cpp  EqualityCheck.cpp  ErrorObject.cpp  EvalsFunction.cpp  FilenameifyOperation.cpp  NotOperation.cpp  NumberObject.cpp  SitixVariableObject.cpp  Slicer.cpp  StackPush.cpp  StringObject.cpp  SwapOperation.cpp  TrimOperation.cpp  evals.cpp
src/types/: Copier.cpp  DebuggerStatement.cpp  Dereference.cpp  ForLoop.cpp  IfStatement.cpp  Object.cpp  (+3 more)
test/: config.stx  default.html  index.html  thibault.html
(+8 files in other folders)
